Fixed 300x50 and 320x50 being too large. Added 300x50 and 320x50 static assets.

--- a/app/rich/templates/css/300x50.scss
+++ b/app/rich/templates/css/300x50.scss
@@ -36,7 +36,7 @@ html, body {
             height: {height}-2px;
         }
         .background1{
-            width: {width}px;
+            width: auto;
             height: {height}px;
 
         }
